--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "heerach-interiors",
   "version": "0.0.0",
   "scripts": {
-  "start": "vite preview",
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
-},
-
+    "start": "vite preview",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "firebase": "^11.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
     "vite": "^4.3.4"
   },
