--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
+    "uuid": "^11.1.0",
     "vite": "^4.3.4"
   },
   "devDependencies": {
