--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
-    "uuid": "^11.1.0",
-    "vite": "^4.3.4"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.3.3"
   }
 }
